	* src/grep.c (page_alloc): New function.
	(ubuffer, pagesize): New vars.
	(ALIGN_TO): New macro.
	(reset): Initialize new vars.  Check for overflow in buffer size calc.
	Use page_alloc instead of valloc.
	(fillbuf): Likewise.  Use memcpy to copy saved area.

1998-11-15  Paul Eggert

	* dfa.c (dfacomp), search.c (EGexecute): Don't assume char is unsigned.

1998-11-13  Eli Zaretskii  <eliz@is.elta.co.il>

	* djgpp/config.bat: Rewrite to run the configure script via Bash.
	* djgpp/config.site, djgpp/getconf: New files.
	* djgpp/config.h, djgpp/*.mak, djgpp/po2tbl.sed: Remove.
	* djgpp/README: Update instructions.

	* Makefile.am (EXTRA_DIST): Update the list of DJGPP files.

	* src/system.h (IS_SLASH): New macro.
	(is_EISDIR): Define it here for DOS and Windows.

	* src/grep.c (main) [O_BINARY]: Set stdout to binary mode, so the
	EOL formats of the input and output files match, unless stdout is
	the console device.
	(is_EISDIR): Don't define if already defined.  Accept a second
	argument, the file name; all callers changed.
	(grepdir): Don't free `file', inside the loop.  Use IS_SLASH to
	check whether `dir' needs a slash.
	(grepfile): If file is a directory, set e to EISDIR.

1998-11-11  Alain Magloire

	* src/regex.c : On Apple, grep is overriding the regex library
	(recomp, etc.). Adding __private_extern__ in the declaration
	localizes the scope of that symbol for the linker, so it knows
	to use grep's regex routines rather than those in lib system.
	Done by Wilfredo Sanchez.

1998-11-10  Alain Magloire

	* src/vms_fab.{c,h}: New file for VMS wildcard expansion
	Written by Phillip C. Brisco.

	* vms/make.com : add line to compile vms_fab.c and 
	{e,f,}grepmat.c with link for each grep/fgrep/egrep.
	Base on patch send by Phillib C. Brisco.

1998-11-09  Alain Magloire

	* grep-2.2c on alpha for testing.

1998-11-09  Paul Eggert

	* src/grep.1: Fix `Last Change' of output by generating the date
	from the RCS Id.

	* src/grep.c (is_EISDIR): New macro.